aws_infra/yaml/dev/api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: "api-deployment"
  namespace: "renft-app"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: "api"
  template:
    metadata:
      labels:
        app: "api"
    spec:
      serviceAccountName: dev-renft-api-aws-sa
      containers:
        - name: api
          image: 955409730607.dkr.ecr.ap-northeast-1.amazonaws.com/dev-renft-api:latest
          resources:
            requests:
              cpu: 2
              memory: 2Gi
          ports:
            - containerPort: 8888
---
apiVersion: v1
kind: Service
metadata:
  name: "api-service"
  namespace: "renft-app"
spec:
  type: NodePort
  selector:
    app: "api"
  ports:
    - protocol: TCP
      port: 8888
      targetPort: 8888
