aws_infra/yaml/dev/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: "frontend-deployment"
  namespace: "renft-app"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: "frontend"
  template:
    metadata:
      labels:
        app: "frontend"
    spec:
      containers:
        - name: frontend
          image: 955409730607.dkr.ecr.ap-northeast-1.amazonaws.com/dev-renft-frontend:latest
          resources:
            requests:
              cpu: 2
              memory: 2Gi
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: "frontend-service"
  namespace: "renft-app"
spec:
  type: NodePort
  selector:
    app: "frontend"
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
